--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "georeport",
   "version": "0.1.2",
-  "description": "A Node.js georeport v2 server based on express.",
+  "description": "A Node.js json georeport v2 server based on express.",
   "main": "src/georeport.js",
   "scripts": {
     "test": "mocha"
@@ -17,9 +17,11 @@
   "dependencies": {
     "express": "~3.4.4",
     "mongoose": "~3.8.0",
-    "request": "~2.27.0"
+
+    "lodash": "~2.3.0"
   },
   "devDependencies": {
-    "mocha": "~1.14.0"
+    "mocha": "~1.14.0",
+    "request": "~2.27.0"
   }
 }
