--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
 
     "lodash": "~2.3.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:stetro/georeport.git"
+  },
   "devDependencies": {
     "mocha": "~1.14.0",
     "request": "~2.27.0"
