--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "express": "~3.4.4",
     "mongoose": "~3.8.0",
-    "lodash": "~2.3.0"
+    "lodash": "~2.3.0",
+    "async": "~0.2.9"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,9 @@
   "devDependencies": {
     "mocha": "~1.14.0",
     "request": "~2.27.0",
-    "octonode": "~0.3.6"
+    "octonode": "~0.3.6",
+    "escomplex-ast-moz": "~0.1.5",
+    "escomplex": "~0.2.1",
+    "esprima": "~1.0.4"
   }
 }
